tra-package/main/default/objects/Deployment_Analysis_Run__c/Deployment_Analysis_Run__c.object-meta.xml
<CustomObject>
    <label>Deployment Analysis Run</label>
    <nameField>
        <displayFormat>DAR-{0000}</displayFormat>
        <label>Deployment Analysis Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Analysis Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>