tra-package/main/default/objects/Deployment_Analysis_Run__c/fields/Architect_Impacts__c.field-meta.xml
<CustomField>
    <fullName>Architect_Impacts__c</fullName>
    <label>Architect Impacts</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>