tra-package/main/default/objects/Deployment_Analysis_Run__c/fields/Gate_Version__c.field-meta.xml
<CustomField>
    <fullName>Gate_Version__c</fullName>
    <label>Gate Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>