tra-package/main/default/objects/Deployment_Analysis_Run__c/fields/High_Count__c.field-meta.xml
<CustomField>
    <fullName>High_Count__c</fullName>
    <label>High Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>