tra-package/main/default/objects/Deployment_Analysis_Run__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <description>UI polling timestamp</description>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>