tra-package/main/default/objects/Deployment_Analysis_Run__c/fields/Low_Count__c.field-meta.xml
<CustomField>
    <fullName>Low_Count__c</fullName>
    <label>Low Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>