tra-package/main/default/objects/Deployment_Analysis_Run__c/fields/Policy_Profile__c.field-meta.xml
<CustomField>
    <fullName>Policy_Profile__c</fullName>
    <label>Policy Profile</label>
    <length>50</length>
    <type>Text</type>
</CustomField>