tra-package/main/default/objects/Deployment_Analysis_Run__c/fields/Processed_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Processed_Triggers__c</fullName>
    <description>how many triggers are done</description>
    <label>Processed Triggers</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>