tra-package/main/default/objects/Deployment_Analysis_Run__c/fields/Release_Decision__c.field-meta.xml
<CustomField>
    <fullName>Release_Decision__c</fullName>
    <label>Release Decision</label>
    <length>50</length>
    <type>Text</type>
</CustomField>