tra-package/main/default/objects/Deployment_Analysis_Run__c/fields/Release_Label__c.field-meta.xml
<CustomField>
    <fullName>Release_Label__c</fullName>
    <label>Release Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>