tra-package/main/default/objects/Deployment_Analysis_Run__c/fields/Release_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Release_Rationale__c</fullName>
    <label>Release Rationale</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>