tra-package/main/default/objects/Deployment_Analysis_Run__c/fields/Release_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Release_Recommendation__c</fullName>
    <label>Release Recommendation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>