tra-package/main/default/objects/Deployment_Analysis_Run__c/fields/Required_Fixes__c.field-meta.xml
<CustomField>
    <fullName>Required_Fixes__c</fullName>
    <label>Required Fixes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>