tra-package/main/default/objects/Deployment_Analysis_Run__c/fields/Top_Risks__c.field-meta.xml
<CustomField>
    <fullName>Top_Risks__c</fullName>
    <label>Top Risks</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>