tra-package/main/default/objects/Deployment_Analysis_Run__c/fields/Total_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Total_Triggers__c</fullName>
    <description>total triggers to analyze</description>
    <label>Total Triggers</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>